古典ベクトル解析の定理を復元するところまで

--- a/preface.tex
+++ b/preface.tex
@@ -1,6 +1,6 @@
 \section*{まえがき}
 
-これは Michael Spivak ``Calculus on Manifolds: A Modern Approach to Classical Theorems of Advanced Calculus'' (CRC Press, 1971) および齋藤正彦による訳書「スピヴァック 多変数の解析学―古典理論への現代的アプローチ」（東京図書, 2007）に沿って，多変数解析学の勉強会をした（する）ときのノートである．大筋としては Spivak に沿った進行をしているが，詳細は異なる．記法や用語といった細かな点については勿論のこと，証明も私個人の嗜好を優先して書いたものが多い．特に積分は測度論に基づいており，加藤賢悟「測度論的確率論　講義ノート　2016年版」を参考にしている．勉強会の進行に合わせて内容は随時加筆される．
+これは Michael Spivak ``Calculus on Manifolds: A Modern Approach to Classical Theorems of Advanced Calculus'' (CRC Press, 1971) および齋藤正彦による訳書「スピヴァック 多変数の解析学―古典理論への現代的アプローチ」（東京図書, 2007）に沿って，多変数解析学の勉強会をしたときのノートである．大筋としては Spivak に沿った進行をしているが，詳細は異なる．記法や用語といった細かな点については勿論のこと，証明も私個人の嗜好を優先して書いたものが多い．特に積分は測度論に基づいており，加藤賢悟「測度論的確率論　講義ノート　2016年版」を参考にしている．
 
 より具体的には，多変数関数の微積分の定義からはじめて，つぎの形の Stokes の定理およびその周辺の話題までをカバーすることを最終的な目標にしている．
 \begin{thm*}
