section6までとりあえず移行

--- a/section2.tex
+++ b/section2.tex
@@ -1,3 +1,5 @@
+\include{./preamble.tex}
+
 \section{多変数関数の微分}
 
 まず「微分とは線型写像によって関数を近似するおこないである」というテーゼに基づいて微分を高次元へと拡張する．この定義は微分可能多様体に対してもほぼそのまま拡張が通るという点で一般性の高い抽象的な定義であるが，他方で実際の計算においては使いづらい．実際には$C^1$級という関数クラスにおいては「各変数に関する偏微分を計算することで微分の情報をすべて取り出せる」ということを見る．これゆえ大抵の場合で微分の計算は偏導関数の計算に帰着する．
