--- a/section3.tex
+++ b/section3.tex
@@ -1,3 +1,5 @@
+\include{./preamble.tex}
+
 \section{測度論}
 
 積分の扱いに入る．このノートでは Spivak から大きく構成を変えて，測度論に基づいて積分を定義する．理由は大小含めていくつかあるが，主要な理由の第一としては積分と極限の順序交換ができる条件を見通しよく述べたかったからである\footnote{いくらか個人的な理由たちとしては，Spivak 自身が測度0集合の性質に関してそれなりに丁寧に議論しており，測度論の枠組みに片足を突っ込んでしまっていること，私が測度論で出てくる「骨の折れる証明」に対して手を動かしてみたことがなかったので，手を動かして理解したいと思っていたこと，などがある．}．
