--- a/section4.tex
+++ b/section4.tex
@@ -1,3 +1,5 @@
+\include{./preamble.tex}
+
 \section{多変数関数の積分}
 
 前節に引き続き，積分の議論を続ける．第一の話題である Fubini の定理は，いわゆる多変数関数の重積分を各変数に関する逐次積分で置き換えてよい充分条件を与える．この定理を Riemann 積分の範囲内で厳密に記述するとやや複雑となる．この複雑さを排し，よりシンプルな形で述べたい，というのが測度論を導入した所以のひとつである．
@@ -312,4 +314,3 @@ $B \coloneqq \set{x \in A | \det J_\varphi(x) = 0}$と置き，連続写像$x \m
 \begin{que}[*]
 実際には変数変換公式の仮定は更に弱めることができるらしい．例えば単射性を落とすといった拡張の仕方があり得るらしい．ところで極座標変換くらいだったら微分同相という仮定のついたバージョンからでも出せた．仮定を弱めたくなる実用的な例はいくらでもあると思うのだが，とりあえず思いついていない．
 \end{que}
-
