--- a/section5.tex
+++ b/section5.tex
@@ -1,3 +1,5 @@
+\include{./preamble.tex}
+
 \section{鎖体上の微分形式とその積分}
 
 本節では微分形式を定義して Stokes の定理を定式化する．Spivak にも述べてあるように，適切な諸概念を準備した上であれば，Stokes の定理の証明は特に難しくない．裏返せば，証明が当たり前になるように諸概念を用意することが本節の目標である．
