--- a/section6.tex
+++ b/section6.tex
@@ -1,3 +1,5 @@
+\include{./preamble.tex}
+
 \section{微分可能多様体}
 
 微分可能多様体を定義し，前節に定義したベクトル場や微分形式，Stokes の定理を微分可能多様体にまで拡張する．微分可能多様体に対する Stokes の定理が，古典ベクトル解析における大定理たちを系として持つことを証明する．
