--- a/preamble.tex
+++ b/preamble.tex
@@ -85,5 +85,5 @@
 \DeclareMathOperator{\Tan}{Tan}
 \DeclareMathOperator{\id}{id}
 \DeclareMathOperator{\Vect}{Vect}
-\newcommand{\dif}{\mathop{}\!d}
+\newcommand{\dif}{d}
 \DeclareMathOperator{\Image}{Im}
